	* view.c (view_ok_to_quit): Changed return type to gboolean.
	Adjusted returned values.
	* view.c (view_load): Changed return type to gboolean. Adjusted
	returned values.
	* view.c (view): Rewrote the code a little bit.
	* view.h (view): Rewrote the comment.
	* view.c: Eliminated some ?: operators.
	* view.c: Corrected some typos and indentation.

2005-04-16  Roland Illig  <roland.illig@gmx.de>

	* view.c (struct WView): Renamed have_frame to dpy_frame_size.
	* view.c (view_is_in_panel): Added.
	* view.c (view_percent): Removed the last parameter, as it has
	always the same value.
	* view.c: Code cleanup.
	* view.c (struct WView): Removed start_col. Added
	dpy_text_start_col, which has a similar function like start_col,
	but does not have negative values. Added bounds checking for
	dpy_text_start_col. Code cleanup, as usual.
	* view.c (struct WView): Renamed start_display to dpy_text_start.
	Fixed one invalid use of bit arithmetics (line 1819).
	* view.c: Added the `byte' type as an alias for unsigned char.
	Converted some datasources to using byte as the base type.
	Removed the superfluous type conversions.
	* view.c (vwidth, vheight): Replaced these two macros with their
	expansion. They looked like variables, which was irritating.
	* view.c (view_get_datacolumns): Added. Replaced equivalent
	expressions to call this function.
	* view.c (display): Removed the call to the empty macros
	view_freeze() and view_thaw(). Deleted these macros, as they
	are otherwise unused.
	* view.c (enqueue_change): Made the algorithm independent of the
	memory layout (especially the order) of the fields in struct
	hexedit_change_node. Rewrote it.
	* view.c (free_change_list): Don't use view->change_list as
	scratch variable.

2005-04-14  Roland Illig  <roland.illig@gmx.de>

	* util.h (str_unconst): Added a conditional INLINE_STR_UNCONST
	that makes str_unconst() an inline function.

2005-04-14  Roland Illig  <roland.illig@gmx.de>
